<resources>
    <string name="app_name">rAndroid</string>
    <string name="navigation_news">News</string>
    <string name="navigation_user">User</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="hot_sort">Hot</string>
    <string name="top_sort">Top</string>
    <string name="new_sort">New</string>
    <string name="controversial_sort">Controversial</string>
    <string name="username">Username</string>
    <string name="about_me">About me</string>
    <string name="app_info">App info</string>
    <string name="title_activity_single2">Single2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="log_out">Log out</string>
    <string name="sing_in">Sing in</string>
</resources>
